mad/show/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: show-deployment
  namespace: mad
  labels:
    app: show
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: show
      version: v1
  template:
    metadata:
      labels:
        app: show
        version: v1
    spec:
      containers:
        - name: show
          image: aaronyunan/show:12
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
