mad/show/service-load-balancer.yaml
# Create an External Load Balancer
apiVersion: v1
kind: Service
metadata:
  name: show-service-load-balancer
  namespace: mad
spec:
  selector:
    app: show
  ports:
    - port: 11001
      targetPort: 8080  
  type: LoadBalancer
