mad/show/destination-rule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: show-destination-rule
  namespace: mad
spec:
  host: show-service-cluster-ip
  subsets:
    - labels:
        version: v1
      name: v1
      trafficPolicy:
        connectionPool:
          http:
            maxRequestsPerConnection: 1
        outlierDetection:
          consecutiveErrors: 1
          interval: 1s
          baseEjectionTime: 3m
          maxEjectionPercent: 100
