mad/show/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: show-virutal-service
  namespace: mad
spec:
  hosts:
    - "show-service-cluster-ip"
  http:
    - route:
        - destination:
            host: show-service-cluster-ip
            subset: v1
      retries:
        attempts: 3
        perTryTimeout: 2s
        retryOn: 5xx
